--- a/heptacat.cabal
+++ b/heptacat.cabal
@@ -24,8 +24,10 @@ library
 
   build-depends:     base ==4.*
                    , cmdargs >= 0.10.2
+                   , data-default >= 0.5
                    , lens >= 3.8.7.3
                    , MissingH >= 1.2
+                   , mtl >= 2.1.2
 
   ghc-options:       -Wall -O2
 
