--- a/heptacat.cabal
+++ b/heptacat.cabal
@@ -37,6 +37,8 @@ library
                    , lens >= 3.8.7.3
                    , MissingH >= 1.2
                    , mtl >= 2.1.2
+                   , process >= 1.1.0.2 
+                   , strict >= 0.3.2
                    , transformers >= 0.3
                    , yaml >= 0.8
 
