--- a/heptacat.cabal
+++ b/heptacat.cabal
@@ -24,8 +24,8 @@ library
                      Heptacat.Options
                      Heptacat.Project
                      Heptacat.Project.IO
+                     Heptacat.Task
                      Heptacat.Utils
-                     Heptacat.Worker
 
   build-depends:     base ==4.*
                    , aeson >= 0.6.1
