--- a/heptacat.cabal
+++ b/heptacat.cabal
@@ -41,6 +41,7 @@ library
                    , lens >= 3.8.7.3
                    , MissingH >= 1.2
                    , mtl >= 2.1.2
+                   , old-locale >= 1
                    , process >= 1.1.0.2 
                    , time >= 1.4
                    , transformers >= 0.3
